# mon-projet-ia

./: .gitignore  Dockerfile  README.md  app.py  model.py  pyproject.toml  requirements.txt  structure-projet-ia.txt
app/: main.py  model.py  model_bert.py  preprocess_image.py  schema.py  sentiment_classifier.py
frontend/: streamlit_app.py
test/: test_app.py  test_model.py
