[project]
name = "mon-projet-ia"
version = "0.1.0"
description = "A simple API for IA deployment avec Flask"
authors = ["Laurent <laurentchouraki@hotmail.fr>"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "scikit-learn>=1.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
