[project]
name = "mon-projet-ia"
version = "0.1.0"
description = "A simple API for IA deployment avec FASTAPI"
authors = [
    {name = "Laurent", email = "laurentchouraki@hotmail.fr"},
]
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "fastapi>=0.133.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "tensorflow>=2.20.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mon-projet-ia/**"]
